<resources>
    <string name="app_name">SimpleWidgetForecast</string>
    <string name="openWeatherMap_api">f0d74b68a46278cece7489b2e76664f7</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="weather_in">Weather in:</string>
    <string name="weathericon">WeatherIcon</string>
    <string name="textview">TextView</string>
    <string name="temperature">Temperature</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="feels_like">Feels like</string>
    <string name="wind_direction">Wind direction</string>
    <string name="no_location_access_granted">Please set location manually in settings</string>
    <string name="custom_location_api_error">Can\'t find your custom location. Try another one or check spelling.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
